# mo-forecast

./: .gitignore  .pre-commit-config.yaml  README.md  conda.yaml  devenv.nix  devenv.yaml  pyproject.toml  set_cron_env.sh  set_cron_env.sh.sample  tox.ini  venv.yaml
.github/workflows/: main.yml
scripts/: download_aws.aria2.sh  download_aws.sh  download_ecmwf.sh  download_gfs.aria2.sh  download_gfs.sh  download_gsmap.sh  download_madis.aria2.sh  download_madis.sh  postproc_python.sh  run_anomaly.sh  run_arwpost.sh  run_ewb_quicklook.sh  run_fcst.sh  run_fcst_3dvar.sh  run_fcst_m.sh  run_fcst_nodl.sh  run_post_ens.sh  run_wps.sh  run_wrf.sh  run_wrf3dvar.sh  run_wrfda_pre.sh  send_alert.sh  set_date_validation.sh  set_date_vars.sh  set_env_wrf.run.sh  set_env_wrf.run.sh.ubuntu  upload.sh  upload_m.sh  web_upload.sh
scripts/MADIS2LITTLER/: .env  .env.sample  README.md  compile.ksh  metar_provider  namelist.madis  run_madis_to_little_r.ksh  run_madis_to_little_r_stat.ksh
scripts/MO2LITTLER/: .env.sample  .gitignore  README.md  convert.f90  prepare_stations.py
scripts/grads/: arrow.gsf  itoa.gsf  mask.nc  mask_sst.nc  rainccol.gs  setColor_bias.gs  setColor_gsmap.gs  setColor_gsmap_hr.gs  setColor_hi.gs  setColor_meteologix.gs  setColor_rh.gs  setColor_sst.gs  setColor_t2.gs  setColor_winds.gs  setLabel_MO.gs  setMap.gs  test.gs  wrf_HI.gs  wrf_HI_ens.gs  wrf_clim.gs  wrf_rainfall_hourly.gs  wrf_rainfall_hourly_metro_manila.gs  wrf_var.gs  wrf_var2.gs  wrf_var_ens.gs
scripts/python/: __const__.py  (+29 more)
tests/: conftest.py  test_bash.py
validation/: run_validation.sh
(+130 files in other folders)
