[project]
name = "mo-forecast"
version = "0.1.0"
dependencies = [
    "cartopy>=0.22",
    "metpy==1.5.1",
    "netcdf4>=1.6",
    "numpy<2",
    "pandas<2.2",
    "tqdm>=4.64.0",
    "wrf-python",
    "xarray<2024",
]

[tool.ruff]
target-version = "py39"

[tool.basedpyright]
pythonVersion = "3.9"
typeCheckingMode = "standard"

[tool.uv]
dev-dependencies = [
  "pytest-mock>=3.10",
  "pytest>=7.4,<8",
]

[tool.uv.sources]
wrf-python = { git = "https://github.com/DWesl/wrf-python", branch = "cmake-build" }

[tool.pytest.ini_options]
pythonpath = "scripts/python"
markers = [
    "slow: slow tests."
]
filterwarnings = [
    "ignore::DeprecationWarning"
]
